@@ -7,6 +7,8 @@ AM_PROG_VALAC([0.16.0])
 AM_PROG_CC_C_O
 LT_INIT
 
+GLIB_GSETTINGS
+
 dnl ###########################################################################
 dnl Dependencies
 dnl ###########################################################################
