@@ -4,7 +4,14 @@ dbus_services_DATA = indicator-bluetooth.service
 %.service: %.service.in
 	sed -e "s|\@pkglibexecdir\@|$(pkglibexecdir)|" $< > $@
 
-EXTRA_DIST = indicator-bluetooth.service.in
+gsettings_SCHEMAS = com.canonical.indicator.bluetooth.gschema.xml
+@INTLTOOL_XML_NOMERGE_RULE@
+@GSETTINGS_RULES@
+
+EXTRA_DIST = \
+  indicator-bluetooth.service.in \
+  com.canonical.indicator.bluetooth.gschema.xml.in
 
 CLEANFILES = \
-  $(dbus_services_DATA)
+  $(dbus_services_DATA) \
+  $(gsettings_SCHEMAS)
