@@ -1,0 +1,9 @@
+<schemalist>
+  <schema id="com.canonical.indicator.bluetooth" path="/com/canonical/indicator/bluetooth/">
+    <key name="visible" type="b">
+      <default>true</default>
+      <_summary>Whether or not to show the bluetooth indicator in the menu bar.</_summary>
+      <_description>Whether or not to show the bluetooth indicator in the menu bar.</_description>
+    </key>
+  </schema>
+</schemalist>
