@@ -1,5 +1,6 @@
 # List of source files containing translatable strings.
 # Please keep this file in alphabetical order.
 [encoding: UTF-8]
+data/com.canonical.indicator.bluetooth.gschema.xml.in
 src/indicator-bluetooth.vala
 src/indicator-bluetooth-service.vala
